--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "gatsby": "^5.13.7",
+    "@gatsbyjs/reach-router": "^1.3.9",
+    "@microsoft/applicationinsights-react-js": "^17.3.2",
+    "@microsoft/applicationinsights-web": "^3.3.3",
+    "gatsby": "^4.25.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
